--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
   <body>
     <nav class="navbar-mobile">
       <ul>
-        <li><a href="#">music</a></li>
+        <li><a class="active" href="/index.html">home</a></li>
+        <li><a href="/music.html">music</a></li>
         <li><a href="#">nü world</a></li>
         <li><a href="#">journal</a></li>
       </ul>
@@ -27,7 +28,8 @@
     <nav class="navbar-pc">
       <div></div>
       <ul>
-        <li><a href="#">music</a></li>
+        <li><a class="active" href="/index.html">home</a></li>
+        <li><a href="/music.html">music</a></li>
         <li><a href="#">nü world</a></li>
         <li><a href="#">journal</a></li>
       </ul>
