--- a/music.html
+++ b/music.html
@@ -16,5 +16,174 @@
     <title>music</title>
   </head>
 
-  <body></body>
+  <body class="bg-black">
+    <nav class="navbar-mobile">
+      <ul>
+        <li><a href="/index.html">home</a></li>
+        <li><a class="active" href="/music.html">music</a></li>
+        <li><a href="#">nü world</a></li>
+        <li><a href="#">journal</a></li>
+      </ul>
+    </nav>
+
+    <nav class="navbar-pc">
+      <ul>
+        <li><a href="/index.html">home</a></li>
+        <li><a class="active" href="/music.html">music</a></li>
+        <li><a href="#">nü world</a></li>
+        <li><a href="#">journal</a></li>
+      </ul>
+    </nav>
+
+    <section class="music-header-container">
+      <div>
+        <img
+          style="height: 19em"
+          src="assets/dbs_red.svg"
+          alt=""
+          class="star-img" />
+      </div>
+      <p>scroll to</p>
+      <h1>
+        <span style="color: var(--white); text-shadow: 1px 1px 25px #ffffff4e"
+          >DISCOVER KEITH</span
+        >
+      </h1>
+    </section>
+
+    <section class="music-album-container">
+      <div class="album" grid-area="1">
+        <iframe
+          src="https://bandcamp.com/EmbeddedPlayer/album=2598121000/size=large/bgcol=333333/linkcol=ffffff/minimal=true/transparent=true/"
+          seamless
+          ><a
+            href="https://wwmkeith.bandcamp.com/album/from-stupidity-to-realization"
+            >from stupidity to realization by wwmkeith</a
+          ></iframe
+        >
+        <div class="credits-container">
+          <div class="credits">
+            <h2>From Stupidity To Realization</h2>
+            <h3>
+              2024, Produced by
+              <span
+                style="color: var(--white); text-shadow: 1px 1px 10px #ffffff6f"
+                >keith.</span
+              >
+            </h3>
+          </div>
+
+          <ul class="tracklist">
+            <li>I. Tek Buddy</li>
+            <li>II. Bloodbath</li>
+          </ul>
+
+          <p>
+            Two songs portraying a change of mentality while growing up.
+            <br />
+            The loss of the innocence of childhood.
+          </p>
+        </div>
+      </div>
+      <div class="album" grid-area="2">
+        <iframe
+          src="https://bandcamp.com/EmbeddedPlayer/album=2598121000/size=large/bgcol=333333/linkcol=ffffff/minimal=true/transparent=true/"
+          seamless
+          ><a
+            href="https://wwmkeith.bandcamp.com/album/from-stupidity-to-realization"
+            >from stupidity to realization by wwmkeith</a
+          ></iframe
+        >
+        <div class="credits-container">
+          <div class="credits">
+            <h2>From Stupidity To Realization</h2>
+            <h3>
+              2024, Produced by
+              <span
+                style="color: var(--white); text-shadow: 1px 1px 10px #ffffff6f"
+                >keith.</span
+              >
+            </h3>
+          </div>
+
+          <ul class="tracklist">
+            <li>I. Tek Buddy</li>
+            <li>II. Bloodbath</li>
+          </ul>
+
+          <p>
+            Two songs portraying a change of mentality while growing up.
+            <br />
+            The loss of the innocence of childhood.
+          </p>
+        </div>
+      </div>
+      <!-- <div class="album">
+        <iframe
+          src="https://bandcamp.com/EmbeddedPlayer/album=2598121000/size=large/bgcol=333333/linkcol=ffffff/minimal=true/transparent=true/"
+          seamless
+          ><a
+            href="https://wwmkeith.bandcamp.com/album/from-stupidity-to-realization"
+            >from stupidity to realization by wwmkeith</a
+          ></iframe
+        >
+        <div class="credits-container">
+          <div class="credits">
+            <h2>From Stupidity To Realization</h2>
+            <h3>
+              2024, Produced by
+              <span
+                style="color: var(--white); text-shadow: 1px 1px 10px #ffffff6f"
+                >keith.</span
+              >
+            </h3>
+          </div>
+
+          <ul class="tracklist">
+            <li>I. Tek Buddy</li>
+            <li>II. Bloodbath</li>
+          </ul>
+
+          <p>
+            Two songs portraying a change of mentality while growing up.
+            <br />
+            The loss of the innocence of childhood.
+          </p>
+        </div>
+      </div>
+      <div class="album">
+        <iframe
+          src="https://bandcamp.com/EmbeddedPlayer/album=2598121000/size=large/bgcol=333333/linkcol=ffffff/minimal=true/transparent=true/"
+          seamless
+          ><a
+            href="https://wwmkeith.bandcamp.com/album/from-stupidity-to-realization"
+            >from stupidity to realization by wwmkeith</a
+          ></iframe
+        >
+        <div class="credits-container">
+          <div class="credits">
+            <h2>From Stupidity To Realization</h2>
+            <h3>
+              2024, Produced by
+              <span
+                style="color: var(--white); text-shadow: 1px 1px 10px #ffffff6f"
+                >keith.</span
+              >
+            </h3>
+          </div>
+
+          <ul class="tracklist">
+            <li>I. Tek Buddy</li>
+            <li>II. Bloodbath</li>
+          </ul>
+
+          <p>
+            Two songs portraying a change of mentality while growing up.
+            <br />
+            The loss of the innocence of childhood.
+          </p>
+        </div>
+      </div> -->
+    </section>
+  </body>
 </html>
