overflow on index

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="icon" href="/assets/dbs_red.svg" type="image/x-icon" />
     <title>keith</title>
   </head>
-  <body>
+  <body class="index-body">
     <nav class="navbar-mobile">
       <ul>
         <li><a class="active" href="/index.html">home</a></li>
